finished edits, back to cep

--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -241,7 +241,35 @@ the existence of a universally consistent classifier guarantees that eventually 
 \end{thex}
 
 
-% \subsection*{The practicality of a consistent statistical test for supervenience} % (fold)
+\subsection*{The feasibility of a consistent statistical test for supervenience} % (fold)
+
+
+The above argument demonstrates the availability of a consistent test under certain restrictions.  The arbitrary slow convergence theorem, however, demonstrates that convergence rates might be unbearably slow.  We therefore provide a (hopefully illustrative) example of the feasibility of such a test on synthetic data.
+
+{\it Caenorhabditis elegans} is a species whose nervous system is believed to consist of the same $279$ labeled neurons for each organism \cite{Durbin87}. Moreover, these animals exhibit a rich behavioral repertoire that seemingly depends on circuit properties \cite{deBonoMaricq05}.  These findings motivate the use of C.~elegans for a synthetic data analysis \cite{Tukey}.  Conducting such an experiment requires specifying a joint distribution $F_{MB}$ over brain-graphs and behaviors.  The joint distribution decomposes into the product of a class-conditional distribution (likelihood) and a prior, $F_{MB}=F_{B|M}F_M$. The prior  specifies the probability of any particular organism exhibiting the behavior.  The class-conditional distribution specifies the brain-graph distribution given that the organism does (or does not) exhibit the behavior. 
+
+Let $A_{uv}$ be the number of chemical synapses between neuron $u$ and neuron $v$ according to \cite{VarshneyChklovskii09}.  Then, let $\mc{E}$ be the set of edges deemed responsible for odor-evoked behavior according to \cite{ChalasaniBargmann07}.  If odor-evoked behavior is supervenient on this subgraph $\mc{E}$, then the distribution of edges in $\mc{E}$ must differ between the two classes. Let each edge in each class be Poisson distributed,  $F_{B_{uv}|M=m_j}$= Poisson$(E_{uv|j})$.  For class $m_0$, let $E_{uv|j}=A_{uv}+\eta$,  where $\eta=0.05$ is a small noise parameter because it is believed that the C.~elegans connectome is similar across organisms \cite{Durbin87}. For class $m_1$, let $E_{uv|1}=A_{ij}+z_{ij}$, where the signal parameter $z_{ij}=\eta$ for all edges not in $\mc{E}$, and $z_{ij}$ is uniformly sampled from $[-5,5]$ for all edges within $\mc{E}$. 
+
+% Let the mental property correspond to the C.~elegans exhibiting (or not exhibiting) a particular behavior (e.g., response to an odor).  Thus, one can specify $F_{M=m_1}$ and $F_{M=m_0}$, the probability of a C.~elegans exhibiting or not a particular behavior.   The class-conditional distributions $F_{B|M=m_j}$ are therefore the distributions of brain-graphs conditional on whether the C.~elegans exhibits said property.
+
+% Now, to generate the data, let $E_{uv|j}$ be an integer-valued random variable whose value indicates the number of chemical synapses (edges) between neurons (vertices) $u$ and $v$ for class $j$. 
+
+We consider $k_n$-nearest neighbor classification of labeled multigraphs (directed, with loops) on 279 vertices, under Frobenius norm. The $k_n$-nearest neighbor classifier used here satisfies $k_n \rightarrow \infty$ as $n \rightarrow \infty$ and $k_n/n \rightarrow 0$ as $n \rightarrow \infty$, ensuring universal consistency. (Better classifiers can be constructed for the joint distribution $F_{M,B}$ used here; however, we demand universal consistency.)  Figure \ref{fig1} shows that for this simulation, rejecting $\eps=0.1$-supervenience at $\alpha=0.01$ only requires a few hundred training samples.
+
+
+% Simulations suggest that one may build a classifier, practically and with a manageable training sample size $n$, that demonstrates $\varepsilon$-supervenience with reasonable choices for $\varepsilon$ and $\alpha$, and a plausible joint distribution $F_{M,B}$ (Figure \ref{fig1}). 
+
+
+
+\begin{figure}[!ht]
+\centering 
+\includegraphics[width=.5\linewidth]{Lhatplot}
+\caption{C.~elegans graph classification simulation results.  The estimated expected misclassification rate $\hL^{n'}_{F}(g_{n})$  (with $n'=1000$ testing samples) %$\hL^{1000}_{\PP}(g_{\mt{n}})$ 
+is plotted as a function of class-conditional training sample size $n_j=n/2$, suggesting that for $\varepsilon=0.1$ we can determine that $\MeB$ holds with $99\%$ confidence with just a few hundred training samples generated from $F_{MB}$. Each dot depicts an estimate for $\hL^{n'}_{F}(g_n)$; standard errors are $(\hL^{n'}_{F}(g_{n}) (1-\hL^{n'}_{F}(g_{n}))/n')^{1/2}$.  For example, at $n_j = 180$ we have $k_n = 53$, $\hL^{n'}_{F}(g_{n}) = 0.057$, and standard error less than $0.01$. We reject $H_0: L_{F}(g^*) \geq 0.10$ at $\alpha=0.01$. Note that $L_{F}(g^*) \approx 0$ for this simulation.}
+\label{fig1}
+\end{figure}
+
+Importantly, conducting this experiment {\it in actu} is not beyond current technological limitations. 3D superresolution imaging \cite{Vaziri2008} combined with neurite tracing algorithms \cite{Helmstaedter2008,Mishchenko09,LuLichtman09} allow the collection of a C. elegans brain-graph within a day. Genetic manipulations, laser ablations, and training paradigms can each be used to obtain a non-wild type population for use as $M=m_1$ \cite{deBonoMaricq05}, and the class of each organism ($m_0$ vs.~$m_1$) can also be determined automatically \cite{Buckingham2008}.
 
 
 
@@ -252,16 +280,22 @@ the existence of a universally consistent classifier guarantees that eventually 
 % \paragraph{Summary} % (fold)
 % \label{par:summary}
 
-We have introduced the notion of $\eps$-supervenience, which states that the Bayes optimal misclassification rate for any mind-brain property pair is less than $\eps$.  This definition admits, for the first time to our knowledge, a viable statistical test for supervenience.  Furthermore, when we restrict the space of minds and brains to the setting of \emph{Gedankenexperiment}  1, we have shown that $k_n$-NN classifiers are universally consistent, such that one can derive a hypothesis test, with confidence level $\alpha$, that is guaranteed to converge to the Bayes optimal misclassification rate, given sufficient data, no matter the true (but unknown) distribution of mind-brain pair properties.  
+This work makes the following contributions.  First, we define statistical supervenience.  This definition makes it apparent that supervenience implies the possibility of perfect classification.  The determination of supervenience from data requires a statistical test.  We therefore demonstrate the existence, availability, and feasibility of a consistent test of a relaxed notion of supervenience, $\eps$-supervenience, given specified and measurable mental properties and brain properties.  In other words, the proposed test is guaranteed to reject the null whenever the null is false, given sufficient data, for any possible distribution governing mental property/brain property pairs. 
+
+% We have introduced the notion of $\eps$-supervenience, which states that the Bayes optimal misclassification rate for any mind-brain property pair is less than $\eps$.  This definition admits, for the first time to our knowledge, a viable statistical test for supervenience.  Furthermore, when we restrict the space of minds and brains to the setting of \emph{Gedankenexperiment}  1, we have shown that $k_n$-NN classifiers are universally consistent, such that one can derive a hypothesis test, with confidence level $\alpha$, that is guaranteed to converge to the Bayes optimal misclassification rate, given sufficient data, no matter the true (but unknown) distribution of mind-brain pair properties.  
 
 Alas, this is a one-sided test, so although power converges to unity, %one can never determine the reason for a failure to reject. %one can never determine whether (i) more data is necessary to get a lower p-value, or (ii) that the particular $\eps$-supervenience does not hold.  
-a failure to reject the null has many possible explanations.  First, the amount of data might be insufficient given the particular distance implemented; collecting more data or utilizing a more informative distance might resolve this difficulty.  Second, $\eps$-supervenience is defined between a mental property and a brain property.  Thus, a failure to reject supervenience on a particular brain property does not entail non-supervenience on any other brain property.  Third, in general, neither mental properties nor brain properties are directly measurable; rather, one typically measures a function of such properties.  For instance, instead of measuring intelligence, one considers the results of an IQ test as a proxy for intelligence.  Similarly, instead of measuring neural spike trains, one estimates spike trains from some measurable neural signal, like voltage.  While one could conceivably ask questions such as: ``is IQ score at some time supervenient on the the output of a voltage measuring device?'', these are less elegant and general than their non-observable analogs, such as: ``is intelligence supervenient on spike trains?''
+a failure to reject the null has many possible explanations.  First, the amount of data might be insufficient given the particular distance implemented; collecting more data or utilizing a more informative distance might resolve this difficulty.  Second, $\eps$-supervenience is defined between a mental property and a brain property.  Thus, a failure to reject $\eps$-supervenience on a particular brain property does not entail non-$\eps$-supervenience on any other brain property.  Third, in general, neither mental properties nor brain properties are directly measurable; rather, one typically measures a function of such properties.  For instance, instead of measuring intelligence, one may consider the results of an IQ test as a proxy for intelligence. 
 
-Thus, given measurement of mental and brain properties that we believe reflect the properties of interest, and a sufficient amount data satisfying the exchangeability assumption, a rejection of $H_0^\eps$ entails that we are $100(1-a)\%$ confident that the mental property under investigation does not $\eps$-supervene on the brain property under investigation.  Unfortunately, failure to reject is more ambiguous. $\eps-$supervenience tests can therefore be thought of as constraining the space of possible brain properties upon which a mental property supervenes.  Determining that a mental property does not supervene on \emph{any} brain property is beyond the capacities of this formalism.
+ % Similarly, instead of measuring neural spike trains, one estimates spike trains from some measurable neural signal, like voltage.  While one could conceivably ask questions such as: ``is IQ score at some time supervenient on the the output of a voltage measuring device?'', these are less elegant and general than their non-observable analogs, such as: ``is intelligence supervenient on spike trains?''
 
-Interestingly, much of contemporary research in neuroscience and cognitive science could be cast as mind-brain supervenience investigations.  Specifically, any investigation that aims to ``explain'' some behavioral or psychological phenomenon by reference to neural (or other brain) activity or structure, could be thought of as mind-brain supervenience investigations.  Thus, the proposed $\eps$-supervenience framework is perhaps a useful unifying perspective for these fields.  Perhaps this is especially true in light of the advent of ``connectomics'' \cite{SpornsKotter05,Hagmann05}, a field devoted to estimating whole organism brain-graphs, and relating them to function.  Testing supervenience of various mental properties on these brain-graphs will likely therefore become increasingly compelling; so the framework developed herein could be fundamental to these investigations.  
+Thus, given measurements of mental and brain properties that we believe reflect the properties of interest, and a sufficient amount data satisfying the independent and identically sampled assumption, a rejection of $\eps$-supervenience entails that we are $100(1-a)\%$ confident that the mental property under investigation does not $\eps$-supervene on the brain property under investigation.  Unfortunately, failure to reject is more ambiguous. $\eps-$supervenience tests can therefore be thought of as constraining the space of possible brain properties upon which a mental property supervenes.  Determining that a mental property does not supervene on \emph{any} brain property is beyond the capacities of this formalism.
+
+Interestingly, much of contemporary research in neuroscience and cognitive science could be cast as mind-brain supervenience investigations.  Specifically, any investigation that aims to ``explain'' some behavioral or psychological phenomenon by reference to neural (or other brain) activity or structure, could be thought of as mind-brain supervenience investigations.  Thus, the proposed $\eps$-supervenience framework is perhaps a useful unifying perspective for these fields.  Perhaps this is especially true in light of the advent of ``connectomics'' \cite{SpornsKotter05,Hagmann05}, a field devoted to estimating whole organism brain-graphs, and relating them to function.  Testing supervenience of various mental properties on these brain-graphs will perhaps therefore become increasingly compelling; the framework developed herein could be fundamental to these investigations.  
 % Note that these connectomics investigations might lack any dynamics; rather, they effectively assume that structure determines the relevant dynamics.  Assuming that dynamics are a function of either vertex or edge attributes, whether any particular mental property is supervenient to ``only'' connectivity structure, or also some attributes, is merely another $\eps$-supervenience hypothesis. 
-For example, questions about whether connectivity structure alone is sufficient to explain a particular mental property is one possible mind-brain $\eps$-supervenience investigation.  Appendix 2 presents an illustrative simulated example using the only currently known connectome---that of a Caenorhabditis elegans---demonstrating that $\eps$-supervenience can be rejected at some critical value $c_\alpha$ with only a reasonably small number of samples. Similar supervenience tests on larger animals will require either higher-throughput imaging modalities \cite{HayworthLichtman06, Bock2011} or more coarse brain-graphs \cite{PalmAmunts10,Johansen-Berg2009}, or both.
+For example, questions about whether connectivity structure alone is sufficient to explain a particular mental property is one possible mind-brain $\eps$-supervenience investigation.  The above synthetic data analysis demonstrates the feasibility of $\eps$-supervenience on small brain-graphs.
+% Appendix 2 presents an illustrative simulated example using the only currently known connectome---that of a Caenorhabditis elegans---demonstrating that $\eps$-supervenience can be rejected at some critical value $c_\alpha$ with only a reasonably small number of samples. 
+Similar supervenience tests on larger animals (such as humans) will potentially benefit from either higher-throughput imaging modalities \cite{HayworthLichtman06, Bock2011}, more coarse brain-graphs \cite{PalmAmunts10,Johansen-Berg2009}, or both.
 
 
 
@@ -322,7 +356,7 @@ there is no known polynomial time complexity algorithm for graph isomorphism
 
 \section*{Acknowledgments}
 
-The authors would like to acknowledge helpful discussions with J.~Lande, B.~Vogelstein, and S.~Seung. 
+The authors would like to acknowledge helpful discussions with J.~Lande, B.~Vogelstein, S.~Seung, and two helpful referees.
 
 \section*{Author Contributions}
 
